# logos-module-viewer

./: README.md  flake.nix
app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
nix/: app.nix  default.nix
